--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,11 @@
   "devCommand": "npm run dev",
   "functions": {
     "src/app/api/**/*.ts": {
-      "runtime": "nodejs18.x"
+      "runtime": "nodejs20.x"
     }
   },
   "env": {
-    "NEXT_PUBLIC_USE_MOCK_API": "true"
+    "NEXT_PUBLIC_USE_MOCK_API": "true",
+    "NEXT_PUBLIC_API_BASE_URL": "http://localhost:3001"
   }
 }
